# Prj02

build-src-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-src-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-9e466e76a5463acfb14a.json  codemodel-v2-363cbe0a04c7cc5705ce.json  index-2022-04-03T19-16-36-0334.json  target-src-Debug-49895c41ab1009ca6810.json
build-src-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-1fea8e2ec13cf06e2d83.json  codemodel-v2-0e0a9a467621db16f221.json  index-2022-04-03T16-02-17-0041.json  target-src-Debug-66f2ba83a15fa217e259.json
build-src-Desktop_Qt_6_2_3_MinGW_64_bit-RelWithDebInfo/: qtcsettings.cmake
build-src-Desktop_Qt_6_2_3_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-src-Desktop_Qt_6_2_3_MinGW_64_bit-Release/.cmake/api/v1/reply/: codemodel-v2-601f6693ec35a7173e65.json  (+8 more)
build-src-Desktop_Qt_6_2_3_MinGW_64_bit-Release/.cmake/api/v1/reply.prev/: cache-v2-680d7d0f6ed3e32fa271.json  cmakeFiles-v1-1e7884ae39e3824cf49f.json  codemodel-v2-34fcedaaadc98bb83048.json  codemodel-v2-7650ace99ea07f7c2546.json  codemodel-v2-c770053a444b8bc762d1.json  index-2022-04-30T15-44-37-0342.json  index-2022-05-05T07-15-45-0379.json  index-2022-05-12T07-16-13-0114.json  target-src-Release-4caa2f72a02c4d31df20.json  target-src-Release-70e1ee325650f256b23c.json  target-src-Release-9021d68144483b93e39f.json
src/: CMakeLists.txt  functions.hpp  main.cpp  testvel.cpp
